--- a/index.html
+++ b/index.html
@@ -4,32 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Урок 4. Объекты в JavaScript	</title>
+	<title>Урок 8. Анонимные функции, замыкания</title>
 </head>
 <body>
-	<h1>Урок 4. Объекты в JavaScript</h1>
+	<h1>Урок 8. Анонимные функции, замыкания</h1>
+	<p>Задание не решено</p>
 	<script>
-
-		// Заадание 1
-		let n = +prompt('Введите число от 0 до 999');
-		let obj = {};
-
-		if(isNaN(n)){
-			console.log('Вы ввели не число');
-		}	else {
-			f(n);
-		}
-
-		function f(n) {
-			if (n >= 0 && n <= 999) {
-				obj.units = n % 10;
-				obj.ten = Math.floor(n/10 % 10);
-				obj.hundreds = Math.floor(n/100);
-				console.log(obj);
-			} else {
-				console.log('Введенное число не в ходит в запрашиваемый диапозон');
-			}
-		}
 
 	</script>
 </body>
